[package]
name = "wxbeacon2http"
version = "0.1.0"
edition = "2021"

[dependencies]
wxbeacon2http_lib = { path = "./wxbeacon2http_lib" }
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }
